--- a/about.qmd
+++ b/about.qmd
@@ -1,3 +1,13 @@
 ---
-title: "About Me!"
+title: "About"
+image: 
+about:
+  template: solana
+  image-shape: rectangle
+   image-width: 20em
 ---
+
+## Get to Know Me!
+
+Hello! I'm Anna Tackabery, a fourth-year UCSB student pursuing a B.S. in Environmental Studies with a concentration in Geography. I will be graduating in June 2024. I'm passionate about sustainability and combating climate change for a better future. I want to go into Environmental Consulting to help mitigate waste and promote sustainability. During my time at UCSB, I have enjoyed the beach, hiking, spending time with my friends, and getting involved in my community. 
+
