--- a/education.qmd
+++ b/education.qmd
@@ -2,35 +2,51 @@
 title: "Education"
 image: UCSB_seal.gif
 about:
-  template: solana
+  template: jolla
   image-shape: rectangle
   image-width: 20em
 ---
 
 ## Relevent Courses
+
 Here are a few courses I've completed that I feel most impacted my learning at UCSB.
 
 ### Green Building and LEEDLab
 
-Green building is a course offered that covers the major topics of Leadership in Energy and Environmental Design (LEED) and LEED Certification processes. In this course we completed a Case Study of a building on campus to see how we could improve the building's energy and water usage, and occupant comfort. 
+Green building is a course offered that covers the major topics of Leadership in Energy and Environmental Design (LEED) and LEED Certification processes. In this course we completed a Case Study of a building on campus to see how we could improve the building's energy and water usage, and occupant comfort.
 
-The LEEDLab is a year-long course that is offered concurrently with the green builidng class. The green building class really helped me to get a foundation in LEED, but the LEEDLab helped me to get real world experience. The goal in the LEEDLab this year was to recertify Bren Hall with the LEED v4 for Building Operations and Maintenance - Existing Building Rating System. Bren Hall has been certified three times before! Once when it was built and its been recertified twice (every 5 years) all awarding it with the LEED Platnium Certification. LEED Plantium Certification is the highest Certification offered! 
+The LEEDLab is a year-long course that is offered concurrently with the green building class. The green building class really helped me to get a foundation in LEED, but the LEEDLab helped me to get real world experience. The goal in the LEEDLab this year was to re-certify Bren Hall with the LEED v4 for Building Operations and Maintenance - Existing Building Rating System. Bren Hall has been certified three times before! Once when it was built and its been re-certified twice (every 5 years) all awarding it with the LEED Platinum Certification. LEED Platinum Certification is the highest Certification offered!
 
-This course has been very gratifying because I've been able to see how my part in this project will hopefully help the building to get certified. We are currently waiting to hear back if the certification will be awarded. The class was divided up into 
+This course has been very gratifying because I've been able to see how my part in this project will hopefully help the building to get certified. We are currently waiting to hear back if the certification will be awarded. The class was divided up into groups based on the credit categories and I worked in the Energy and Atmosphere group. I specifically worked on the Demand Response Credit, the Fundamental Refrigerant Credit, and the Enhanced Refrigerant Credit. We had to prove that we were enlisted in a demand response program through the local energy utility, and that the building didn't use any CFC refrigerants. We were unsuccessful in attaining the Enhanced Refrigerant Credit because the building uses refrigerants and the impact was over the threshold that was required for this credit.
 
+#### [**LEED Green Associate**]{.underline} ![](leed_GA_cmyk.png){fig-align="left" width="15%"}
 
-#### LEED Green Associate
+After taking the green building course, you are almost ready to take the Green Building Certification Inc. LEED Green Associate exam. I studied for a few extra weeks, and took the exam in May 2024. I'm very excited to announce that I PASSED the exam and am not a LEED accredited professional. This certification shows that I have basic fundamental knowledge of LEED and could help work on project teams to work on building certificatons.
 
 ### Stats For Environmental Science
 
+Stats for Environmental Science was a very impactful class for me. This class covers statistical tests, analysis, and coding with R. My understanding of statistical tests is much more thorough then before this class, and I would feel confident running statistical analysis on a dataset in the field. I also feel that this class has furthered my skills in R and science communication through R. My final project in this class was making this website!
+
 ### Exploring Water Data
+
+Exploring Water Data was a course that really helped me get very basic understandings of how to use R. This class was primarily about coding in R and using R to clean data sets. I really enjoyed this class because I felt like it gave me real world skills that I could apply to a job in the future. For our Final Project we were tasked with finding our own public data set, converting it into a visualization, and having a spacial component. I think this project was one of my most challenging yet gratifying experiences in my college courses because real world data sets are not perfect or even very nice to work with! There was a lot of renaming, pivoting, and cleaning of the data sets to get them ready to work with.
+
+![](water_data_final.png){fig-align="left" width="30%"} ![](water_data_final2.png){fig-align="left" width="30%"} ![](water_data_final3.png){fig-align="left" width="30%"}
+
+[Project HTML](ES193SW_html.pdf)
 
 ### Renewable Energy Systems
 
+Renewable Energy Systems was a class at UCSB that opened my eyes to the possibilities of energy. I learned all about the benefits and consequences of each type of renewable energy. In this class, I learned in depth about how each system works and the physics behind it. I think this was really important because now I can make cost benefit analysis and possibly work on improving these mechanisms.
+
+![](Offshore_pic.png){fig-align="center" width="40%"}
+
+[Offshore Wind Energy](Offshore_wind.pdf)
+
 ### Climate Change Mitigation
 
+Climate Change Mitigation was a very inspiring class for me. It was the first time I had taken a class that discussed new and realistic pathways to combat climate change. I learned all about climate modeling and how much it has evolved in recent years, I read reports from the IPCC, and I did a research paper on Direct Air Capture. This class taught me so much about the new technologies that are here to help mitigate the effects of climate change.
 
+![](DAC_pic.png){fig-align="center" width="40%"}
 
-
-
-
+[Could Direct Air Capture (DAC) and storage be the answer to solving climate change?](DAC_final.pdf)
